<resources>
    <string name="app_name">Ask</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="requests">My Requests</string>
    <string name="offers">My Offers</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="end">End:</string>
    <string name="begin">Begin:</string>
    <string name="camping">Camping</string>
    <string name="beach">Beach</string>
    <string name="hiking">Hiking</string>

    <string name="REQUEST_WITH_PENDING_OFFERS">Request Pending</string>
    <string name="REQUEST_WITH_OFFER_SELECTED">Match</string>
    <string name="OFFER_PENDING_FOR_REQUEST">Offer Pending</string>
    <string name="OFFER_ACCEPTED_FOR_REQUEST">Match</string>
    <string name="OFFER_DENIED">Offer Denied</string>

    <string name="category">Category</string>
    <string name="item">Item</string>

    <string-array name="localItemsArray">
        <item>Golf Club</item>
        <item>Pot</item>
        <item>Sleeping Bag</item>
        <item>Surfboard</item>
        <item>Tent</item>
    </string-array>

    <string-array name="categoriesArray">
        <item>Camping</item>
        <item>Beach</item>
        <item>Hiking</item>
    </string-array>
    <string-array name="itemsCampingArray">
        <item>Tent</item>
        <item>Sleeping Bag</item>
        <item>Stove</item>
    </string-array>
    <string-array name="itemsBeachArray">
        <item>Towel</item>
        <item>Surfboard</item>
        <item>Boogie Board</item>
        <item>Paddleboard</item>
    </string-array>
    <string-array name="itemsHikingArray">
        <item>Backpack</item>
        <item>Walking Stick</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="noRequestsMade">You have made no Requests.</string>
    <string name="noOffersMade">You have made no Offers.</string>
    <string name="providedBy">Provided by</string>
    <string name="requestedBy">Requested by</string>
    <string name="title_activity_banner_ads">BannerAdsActivity</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
