<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">

        <!-- id's are for the associated fragment classes -->
        <item
            android:id="@+id/fragment_home"
            android:icon="@drawable/ic_home"
            android:title="@string/app_name"/>
        <item
            android:id="@+id/fragment_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/fragment_requests"
            android:icon="@drawable/ic_requests"
            android:title="@string/requests"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/fragment_offers"
            android:icon="@drawable/ic_offers"
            android:title="@string/offers" />
        <item
            android:id="@+id/fragment_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/fragment_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>