<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/fragment_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <!-- id's are for the associated fragment classes -->
        <item
            android:id="@+id/fragment_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/navigation_requests"
            android:icon="@drawable/ic_requests"
            android:title="@string/requests" />
        <item
            android:id="@+id/navigation_matches"
            android:icon="@drawable/ic_matches"
            android:title="@string/matches" />
        <item
            android:id="@+id/navigation_items"
            android:icon="@drawable/ic_items"
            android:title="@string/items" />
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
</menu>